--- a/src/components/Portfolio.scss
+++ b/src/components/Portfolio.scss
@@ -41,13 +41,15 @@
                 flex-direction: column;
                 opacity: 0;
                 transform: scale(0);
-                transition: all 0.4s ease-in-out;
+                transition: all 0.7s ease-in-out;
                 z-index: 3;
+                font-family: sans-serif;
 
                 h3 {
                     font-size: 2rem;
                     color:#fff;
                     margin-bottom: 2rem;
+                    font-family: sans-serif;
                 }
                 .icons {
                     display:flex;
@@ -60,7 +62,7 @@
                         padding: 0 20px;
                         color: #000;
                         cursor: pointer;
-                        transition: all 0.4s ease-in-out;
+                        transition: all 0.7s ease-in-out;
 
 
                         &:hover {
@@ -73,7 +75,7 @@
                         font-size: 55px;
                         color: #000;
                         cursor: pointer;
-                        transition: all 0.4s ease-in-out;
+                        transition: all 0.7s ease-in-out;
                         &:hover {
                             color: #ffd700;
                             transform: translateY(-5px);
@@ -91,6 +93,7 @@
     h3 {
         padding: 2rem 0;
         text-align: center;
+        font-family: sans-serif;
     }
 }
 
