--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -10,6 +10,7 @@
     .logo {
         display:block;
         padding: 8px 0;
+        box-sizing: border-box;
     }
     img {
         display:block;
@@ -18,7 +19,10 @@
         height: auto;
 
         &.prefix-logo {
-            width: 50px;
+            position:relative;
+            width: 160%;
+            left: -20px;
+            top: -10px;           
         }
     }
 
@@ -41,7 +45,7 @@
             padding: 10px 0;
 
             i {
-                transition: all 0.3s ease-out;
+                transition: all 0.5s ease-out;
             }
 
             &:hover {
@@ -63,7 +67,7 @@
                 width: 100%;
                 text-align: center;
                 opacity: 0;
-                transition: all 0.3s ease-out;
+                transition: all 1s ease-out;
             }
         
         }
@@ -139,6 +143,15 @@
             position:relative;
             transform: translateX(-42%);
         }
+        img {
+        
+            &.prefix-logo {
+                position:relative;
+                width: 15%;
+                left: 0;
+                top: -10px;           
+            }
+        }
 
         ul, nav {
             display: none;
@@ -183,4 +196,5 @@
         }
         
     }
+    
 }
